--- a/public/css/user_style.css
+++ b/public/css/user_style.css
@@ -15,6 +15,12 @@
 	margin: calc((100vh - 200px)/ 2) auto;
 }
 
+.page.login .loginFormContainer .resetPasswordBtn {
+	display: inline-block;
+	color: #2271b1;
+	cursor: pointer;
+}
+
 /* Login form */
 
 .loginFormOverlay {
