--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,8 +69,21 @@ hr{
 	text-decoration: none;
 }
 
-.generalButton:hover {
+.generalButton:hover, .generalSearchBarButton:hover {
 	color: white;
+}
+
+.generalSearchBarButton {
+	padding: 3px;
+    background-color: #2271b1;
+    width: 70%;
+    margin: 0px auto;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    text-align: center;
+    display: block;
+    text-decoration: none;
 }
 
 .generalInput  {
@@ -88,6 +101,22 @@ hr{
     border-right: 0px;
     height: 30px;
 	width: max(120px, 100%);
+}
+
+.generalCheckbox {
+	width: 26px;
+    height: 26px;
+    margin-left: 4px;
+    border: 0px;
+    background-color: #dddddd;
+	position: absolute;
+}
+
+.generalCheckboxContainer {
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	line-height: 30px;
 }
 
 .generalTable .td{
@@ -113,9 +142,6 @@ hr{
 	margin-bottom: 10px;
 }
 
-.generalTable .generalTableContentRow {
-	
-}
 /* Header */
 
 
