--- a/public/css/style.css
+++ b/public/css/style.css
@@ -217,6 +217,7 @@ header.header .desktopHeader div.userInfoDropdown {
 	padding: 10px;
 	background-color: #c3c4c7;
 	color: #1d2327;
+	z-index: 10;
 }
 
 header.header .desktopHeader .headerProfileInfo:hover .userInfoDropdown{
