--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,6 +54,15 @@ hr{
 	padding: 20px;
 }
 
+.noselect {
+  -webkit-touch-callout: none; 
+    -webkit-user-select: none; 
+     -khtml-user-select: none; 
+       -moz-user-select: none; 
+        -ms-user-select: none; 
+            user-select: none;
+}
+
 @media screen and (min-width: 768px) {
 	.desktopNone {
 		display: none;
