--- a/public/css/style.css
+++ b/public/css/style.css
@@ -523,6 +523,7 @@ header.header .mobileHeader .fa-user-circle-o {
 	color: black;
 	padding: 0px;
 	margin: 10px;
+	width: calc(100% - 20px);
 }
 
 .dataBox .boxHeading {
