--- a/public/css/todo_style.css
+++ b/public/css/todo_style.css
@@ -90,55 +90,72 @@
 				margin: 5px;
 			}
 			
-			.todo .todoListOverlay .head {
-				font-size: 150%;
-				font-weight: bold;
-				margin-bottom: 10px;
-			}
+			/* Head */
+				
+				.todo .todoListOverlay .head {
+					font-size: 150%;
+					font-weight: bold;
+					margin-bottom: 10px;
+				}
+				
+				.todo .todoListOverlay .head .todoListName{
+					width: 80%;
+					display: inline-block;
+				}
+				
+				.todo .todoListOverlay .head .closeButton{
+					height: 100%;
+					float: right;
+				}
 			
-			.todo .todoListOverlay .head .todoListName{
-				width: 80%;
-				display: inline-block;
-			}
+			/* Labels */
 			
-			.todo .todoListOverlay .head .closeButton{
-				height: 100%;
-				float: right;
-			}
+				.todo .todoListOverlay .labels {
+					margin-bottom: 5px;
+				}
+				
+				.todo .todoListOverlay .labels .labelHead{
+					margin-bottom: 3px;
+				}
+				
+				.todo .todoListOverlay .labels .tag{
+					padding: 5px;
+					margin: 2px;
+					border: 1px solid black;
+					border-radius: 3px;
+				}
+				
+				.todo .todoListOverlay .labels .editTags {
+					font-size: 130%;
+					margin-left: 10px;
+					cursor: pointer;
+				}
+				
+				.todo .todoListOverlay .labels .addTagFormContainer{
+					padding: 5px 0 5px 0;
+				}
+				
+				.todo .todoListOverlay .labels .addTagFormContainer .addTagSelect {
+					width: calc(100% - 50px);
+					display: inline-block;
+				}
 			
-			.todo .todoListOverlay .labels {
-				margin-bottom: 5px;
-			}
+			/* Entries */
 			
-			.todo .todoListOverlay .labels .labelHead{
-				margin-bottom: 3px;
-			}
-			
-			.todo .todoListOverlay .labels .tag{
-				padding: 5px;
-				margin: 2px;
-				border: 1px solid black;
-				border-radius: 3px;
-			}
-			
-			.todo .todoListOverlay .labels .editTags {
-				font-size: 130%;
-				margin-left: 10px;
-				cursor: pointer;
-			}
-			
-			.todo .todoListOverlay .labels .addTagFormContainer{
-				padding: 5px 0 5px 0;
-			}
-			
-			.todo .todoListOverlay .labels .addTagFormContainer .addTagSelect {
-				width: calc(100% - 50px);
-				display: inline-block;
-			}
-			
-			.todo .todoListOverlay .todoListEntries {
-				margin-bottom: 5px;
-			}
+				.todo .todoListOverlay .todoListEntries {
+					margin-bottom: 5px;
+				}
+				
+				.todo .todoListOverlay .todoListEntryNameBox {
+					margin: 5px 0 5px 0;
+					display: block;
+					padding-left: 5px;
+				}
+				
+				.todo .todoListOverlay .todoListEntryNameBox.checked {
+					background-color: #c1c1c1;
+				}
+				
 		
 		
 		
