--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -1,28 +1,66 @@
 /* Basics */
 
-.page.settings .inputBlock {
-	padding: 10px;
-}
+	.page.settings .inputBlock {
+		padding: 10px;
+	}
 
 
 /* Verify */
 
-.page.verify {
-	text-align: center;
-	font-family: Arial, Helvetica, sans-serif;
-	width: 100vw;
-	display: inline-block;
-}
+	.page.verify {
+		text-align: center;
+		font-family: Arial, Helvetica, sans-serif;
+		width: 100vw;
+		display: inline-block;
+	}
 
-.page.verify .verifyContainer {
-	margin: calc((100vh - 200px)/ 2) auto;
-	padding: 20px;
-	display: inline-block;
-	background-color: #e2e2e2e3;
-	border-radius: 5px;
-	width: min(350px, 100%);
-}
+	.page.verify .verifyContainer {
+		margin: calc((100vh - 200px)/ 2) auto;
+		padding: 20px;
+		display: inline-block;
+		background-color: #e2e2e2e3;
+		border-radius: 5px;
+		width: min(350px, 100%);
+	}
 
-.page.verify .passwordResetContainer .generalInput{
-	margin: 10px 0px;
-}
+	.page.verify .passwordResetContainer .generalInput{
+		margin: 10px 0px;
+	}
+	
+/* Tags */
+
+	.page.tags.tagList .newTagButton {
+		background-color: green;
+	}
+	
+	.page.tags.tagList .tagContainer {
+		line-height: 30px;
+	}
+	
+	.page.tags.tagList .tagContainer .tagActions {
+		text-align: center;
+		font-size: 140%;
+	}
+	
+	.page.tags.tagList .tagContainer .tagActions .icon {
+		margin: 0px 10px 0px 10px;
+		cursor: pointer;
+	}
+	
+	.page.tags.tagList .tagContainer .colorInput{
+		border-top: 0px;
+		border-left: 0px;
+		border-right: 0px;
+		height: 30px;
+		width: 60%;
+		padding-left: 10px;
+	}
+	
+	.page.tags.tagList .tagColorContainer {
+		padding: 2px;
+	}
+	
+	.page.tags.tagList .tagColorContainer .tagColor {
+		margin: 0px 10px 0px 10px;
+		padding: 5px;
+	}
