--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,6 +75,10 @@ hr{
 	padding: 20px;
 }
 
+.red {
+	color: red;
+}
+
 .noselect {
   -webkit-touch-callout: none; 
     -webkit-user-select: none; 
