--- a/public/css/user_style.css
+++ b/public/css/user_style.css
@@ -3,114 +3,125 @@
 
 /* Login page */
 
-.page.login {
-	text-align: center;
-	font-family: Arial, Helvetica, sans-serif;
-	width: 100vw;
-	height: calc(100vh - 30px);
-	display: inline-block;
-}
+	.page.login {
+		text-align: center;
+		font-family: Arial, Helvetica, sans-serif;
+		width: 100vw;
+		height: calc(100vh - 30px);
+		display: inline-block;
+	}
 
-.page.login .loginFormContainer {
-	margin: calc((100vh - 200px)/ 2) auto;
-}
+	.page.login .loginFormContainer {
+		margin: calc((100vh - 200px)/ 2) auto;
+	}
 
-.loginForm .resetPasswordBtn {
-	display: inline-block;
-	color: #2271b1;
-	cursor: pointer;
-}
+	.loginForm .resetPasswordBtn {
+		display: inline-block;
+		color: #2271b1;
+		cursor: pointer;
+	}
 
 /* Login form */
 
-.loginFormOverlay {
-	background-color: #e2e2e2e3;
-	padding: 10px;
-	border-radius: 5px;
-	width: min(350px, 100%);
-}
+	.loginFormOverlay {
+		background-color: #e2e2e2e3;
+		padding: 10px;
+		border-radius: 5px;
+		width: min(350px, 100%);
+	}
 
-.loginFormOverlay input{
-	border-top: none;
-	border-right: none;
-	border-left: none;
-	
-	border-bottom: 2px solid white;
-	width: min(300px, 90%);
-	margin: 10px;
-	height: 44px;
-	line-height: 30px;
-	font-size: 22px;	
-	background-color: transparent;
-	padding: 10px;
-	color: black;
-}
+	.loginFormOverlay input{
+		border-top: none;
+		border-right: none;
+		border-left: none;
+		
+		border-bottom: 2px solid white;
+		width: min(300px, 90%);
+		margin: 10px;
+		height: 44px;
+		line-height: 30px;
+		font-size: 22px;	
+		background-color: transparent;
+		padding: 10px;
+		color: black;
+	}
 
-.loginFormOverlay .loginButton {
-	padding: 5px;
-	background-color: #2271b1;
-	width: 40%;
-	margin: 10px auto;
-	color: white;
-	border-radius: 5px;
-	cursor: pointer;
-	text-align: center;
-}
+	.loginFormOverlay .loginButton {
+		padding: 5px;
+		background-color: #2271b1;
+		width: 40%;
+		margin: 10px auto;
+		color: white;
+		border-radius: 5px;
+		cursor: pointer;
+		text-align: center;
+	}
 
-.loginFormOverlay .loginNotice {
-	width: 100%;
-	text-align: center;
-	color: red;
-}
+	.loginFormOverlay .loginNotice {
+		width: 100%;
+		text-align: center;
+		color: red;
+	}
 
 /* Header login form */
 
-.mainContainer .headerLoginOverlay {
-	position: fixed;
-	z-index: 10;
-	padding-left: calc((100vw - 350px)/ 2);
-	padding-right: calc((100vw - 350px)/ 2);
-	padding-top: calc((100vh - 245px)/ 2);
-	padding-bottom: calc((100vh - 245px)/ 2);
-	background-color: #e2e2e2e3;
-	min-height: 100vh;
-}
+	.mainContainer .headerLoginOverlay {
+		position: fixed;
+		z-index: 10;
+		padding-left: calc((100vw - 350px)/ 2);
+		padding-right: calc((100vw - 350px)/ 2);
+		padding-top: calc((100vh - 245px)/ 2);
+		padding-bottom: calc((100vh - 245px)/ 2);
+		background-color: #e2e2e2e3;
+		min-height: 100vh;
+	}
 
 /* User Profile */
 
-.page.user.profile .profileContainer {
-	margin: 10px;
-	width: calc(100% - 20px);
-	padding: 10px;
-	border: 1px solid grey;
-	border-radius: 10px;
-}
+	.page.user.profile .profileContainer {
+		margin: 10px;
+		width: calc(100% - 20px);
+		padding: 10px;
+		border: 1px solid grey;
+		border-radius: 10px;
+	}
 
 
 /* Notifications */
 
-.page.notifications.list .headerPersonal h3 {
-	float: left;
-}
+	.page.notifications.list .headerPersonal h3 {
+		float: left;
+	}
 
-.page.notifications.list .markReadButton {
-	float: right;
-	width: max(50%, 200px);
-}
+	.page.notifications.list .markReadButton {
+		float: right;
+		width: max(50%, 200px);
+	}
 
 
-.page.notifications.list .notificationContainer {
-	margin-bottom: 10px;
-	padding: 10px;
-	border: 1px solid #1d2327;
-	border-radius: 5px;
-}
+	.page.notifications.list .notificationContainer {
+		margin-bottom: 10px;
+		padding: 10px;
+		border: 1px solid #1d2327;
+		border-radius: 5px;
+	}
 
-.page.notifications.list .notificationContainer.unread {
-	background-color: #80808033
-}
+	.page.notifications.list .notificationContainer.unread {
+		background-color: #80808033
+	}
 
-.page.notifications.list .emptyList {
-	padding: 10px;
-	font-weight: bold;
-}
+	.page.notifications.list .emptyList {
+		padding: 10px;
+		font-weight: bold;
+	}
+	
+/* Settings */
+
+	/* User Roles */
+	.page.role.roleList .newRoleButton {
+		background-color: green;
+	}
+	
+	.page.role.roleList .roleListContainer .icon.editRole {
+		cursor: pointer;
+	}
