--- a/public/css/style.css
+++ b/public/css/style.css
@@ -149,7 +149,7 @@ hr{
     margin-left: 4px;
     border: 0px;
     background-color: #dddddd;
-	position: absolute;
+	vertical-align: middle;
 }
 
 .generalCheckboxContainer {
