--- a/public/css/style.css
+++ b/public/css/style.css
@@ -152,6 +152,13 @@ hr{
 	vertical-align: middle;
 }
 
+.generalTextarea {
+	height: 50px;
+	width: max(120px, 100%);
+	padding-left: 10px;
+	min-height: 30px;
+}
+
 .generalCheckboxContainer {
 	width: 100%;
 	height: 100%;
