--- a/public/css/event_style.css
+++ b/public/css/event_style.css
@@ -69,7 +69,7 @@
 			margin: 5px;
 			padding: 5px;
 			border-radius: 5px;
-			width: calc(100% - 10px);
+			width: calc(100% - 12px);
 			background-color: white;
 			cursor: pointer;
 		}
@@ -77,6 +77,13 @@
 		.page.event.overview .eventsContainer .eventCategoryContainer .categoryContent .event .eventTags {
 			width: 89%;
 			margin-left: 5%;
+			margin-bottom: 3px;
+		}
+		
+		.page.event.overview .eventsContainer .eventCategoryContainer .categoryContent .event .eventTags .tag {
+			margin: 0 2px 0 2px;
+			border-radius: 2px;
+			line-height: 5px;
 		}
 		
 		.page.event.overview .eventsContainer .eventCategoryContainer .categoryContent .event .eventTimes .endTime {
