--- a/public/css/event_style.css
+++ b/public/css/event_style.css
@@ -90,3 +90,21 @@
 			text-align: right;
 		}
 		
+	/* Event Edit */
+	
+		.page.event.editEvent .editEventContainer .inputRow {
+			padding: 10px 5px;
+		}
+		
+		.page.event.editEvent .editEventContainer .tag {
+			padding: 5px;
+			margin: 2px;
+			border: 1px solid black;
+			border-radius: 3px;
+		}
+		
+		.page.event.editEvent .editEventContainer .addTagContainer,
+		.page.event.editEvent .editEventContainer .addResposibleContainer{
+			margin-top: 10px;
+		}
+		
