--- a/public/css/style.css
+++ b/public/css/style.css
@@ -144,6 +144,14 @@ hr{
 	width: max(120px, 100%);
 }
 
+.generalDateinput {
+	border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    height: 30px;
+	width: max(120px, 100%);
+}
+
 .generalCheckbox {
 	width: 26px;
     height: 26px;
@@ -194,6 +202,10 @@ hr{
 	width: 20px;
 	height: 20px;
 	font-size: 20px;
+}
+
+.onclick {
+	cursor: pointer;
 }
 
 /* Header */
