comments added to files about objectives and porpuse/ removed qr-code generator

--- a/public/css/comment_style.css
+++ b/public/css/comment_style.css
@@ -1,3 +1,9 @@
+/*
+//-----------------New CSS File---------------------
+//Style for the comment sections
+//-----------------New CSS File---------------------*/
+
+
 /* Comments */
 
 	/* Overlay */
