--- a/public/css/event_style.css
+++ b/public/css/event_style.css
@@ -1,3 +1,9 @@
+/*
+//-----------------New CSS File---------------------
+//Style for the event page
+//-----------------New CSS File---------------------*/
+
+
 /* Events */
 
 	/* Clients / Locations */
