--- a/public/css/item.css
+++ b/public/css/item.css
@@ -1,3 +1,8 @@
+/*
+//-----------------New CSS File---------------------
+//Style for the item/hardware page
+//-----------------New CSS File---------------------*/
+
 /* Overview / Consumables  */
 
 .page.item.overview .generalTableContentRow {
