--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -1,3 +1,9 @@
+/*
+//-----------------New CSS File---------------------
+//Style for settings
+//-----------------New CSS File---------------------*/
+
+
 /* Basics */
 
 	.page.settings .inputBlock {
