--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,9 @@
+/*
+//-----------------New CSS File---------------------
+//Overall style for application
+//-----------------New CSS File---------------------*/
+
+
 html, body {
 	width: 100vw;
 	height: 100vh;
