--- a/public/css/todo_style.css
+++ b/public/css/todo_style.css
@@ -1,3 +1,9 @@
+/*
+//-----------------New CSS File---------------------
+//Style for the to-do list page
+//-----------------New CSS File---------------------*/
+
+
 /* ToDo */
 
 	/* Categories */
