--- a/public/css/user_style.css
+++ b/public/css/user_style.css
@@ -1,3 +1,9 @@
+/*
+//-----------------New CSS File---------------------
+//Style for user sections (profile, login, etc)
+//-----------------New CSS File---------------------*/
+
+
 /* User styles */
 
 
