--- a/public/css/storage.css
+++ b/public/css/storage.css
@@ -1,3 +1,9 @@
+/*
+//-----------------New CSS File---------------------
+//Style for the storage page
+//-----------------New CSS File---------------------*/
+
+
 /* edit storage */
 
 .page.storage.edit .inputBlock,
